--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-numpy==2.2.4
-pyrr==0.10.3
+pyglm==2.8.2
+glfw==2.9.0
 PyOpenGL==3.1.9
-PyOpenGL_accelerate==3.1.9
-glfw==2.8.0
+PyOpenGL-accelerate==3.1.9
